# python-study

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
board_api/: README.md
board_api/board/: admin.py  models.py  serializers.py  urls.py  views.py
board_api/board/migrations/: 0001_initial.py
board_api/config/: settings.py  urls.py
src/python_study/: __init__.py  basics.py
tests/: test_basics.py  test_board_api.py
