[project]
name = "python-study"
version = "0.1.0"
description = "자바 개발자를 위한 Python 학습 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "seonwoo_jung" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pytest-django>=4.8",
]
# 게시판 CRUD API 예제(board_api/)용 런타임 의존성.
web = [
    "django>=5.1",
    "djangorestframework>=3.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_study"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Django 가 자동 생성하는 마이그레이션 파일은 린트 대상에서 제외한다.
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
# board_api 예제의 앱 모듈을 first-party 로 인식시켜 import 그룹을 분리한다.
known-first-party = ["python_study", "board", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# board_api 를 경로에 추가해 config.settings / board 모듈을 import 가능하게 한다.
pythonpath = ["src", "board_api"]
# pytest-django 가 Django 를 부팅할 때 사용할 설정 모듈 (자바의 활성 프로파일 지정과 유사).
DJANGO_SETTINGS_MODULE = "config.settings"
